update com a sessao dos caixoes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,19 @@
             </form>
         </div>
     </section>
+    <hr>
     <section class="sessao2">
         <h2>Escolha seu caixão</h2>
+        <div class="caixoes">
+            <h3>caixão de carvalho</h3>
+            <img style="align-content: center;" src="https://s.alicdn.com/@sc04/kf/HTB1EH3nntrJ8KJjSspaq6xuKpXa1.jpg_300x300.jpg" alt="lindo caixão">
+        </div>
+        <div class="caixoes">
+            <h3>caixão de aço</h3>
+            <img src="https://imgs.search.brave.com/gBeCL9KuR7ian32gL5WLtPke6lPU7F1XNnS_iTo9anM/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9raGVw/ZXIuYW1hcmFzc2lz/dC5jb20uYnIvc3Rv/cmFnZS9wb3N0cy9D/YWl4YW9kZUElQzMl/QTdvLnBuZw" alt="caixão
+            de ação">
+        </div>
+        
     </section>
     <hr>
     <section class="sessao3">
