--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         <h2>Escolha seu caixão</h2>
         <div class="caixoes">
             <h3>caixão de carvalho</h3>
-            <img style="align-content: center;" src="https://s.alicdn.com/@sc04/kf/HTB1EH3nntrJ8KJjSspaq6xuKpXa1.jpg_300x300.jpg" alt="lindo caixão">
+            <img class="imagenscaixoes" style="align-content: center;" src="https://s.alicdn.com/@sc04/kf/HTB1EH3nntrJ8KJjSspaq6xuKpXa1.jpg_300x300.jpg" alt="lindo caixão">
         </div>
         <div class="caixoes">
             <h3>caixão de aço</h3>
-            <img src="https://imgs.search.brave.com/gBeCL9KuR7ian32gL5WLtPke6lPU7F1XNnS_iTo9anM/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9raGVw/ZXIuYW1hcmFzc2lz/dC5jb20uYnIvc3Rv/cmFnZS9wb3N0cy9D/YWl4YW9kZUElQzMl/QTdvLnBuZw" alt="caixão
+            <img class="imagenscaixoes" src="https://imgs.search.brave.com/gBeCL9KuR7ian32gL5WLtPke6lPU7F1XNnS_iTo9anM/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9raGVw/ZXIuYW1hcmFzc2lz/dC5jb20uYnIvc3Rv/cmFnZS9wb3N0cy9D/YWl4YW9kZUElQzMl/QTdvLnBuZw" alt="caixão
             de ação">
         </div>
-        <div>
-
+        <div class="caixoes">
+            <h3>caixão do seu time</h3>
+            <img class="imagenscaixoes"  src="https://imgs.search.brave.com/D0Jv1Mktc8ZhmFv7ed-1lUDzLFL3TzhKtqzhrGGDIfs/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9zMi5n/bGJpbWcuY29tL2pE/OFZjMUNQUTBJLVgz/NFBreE5keWpNOE1z/TT0vMTI5NHg1Mjoy/NTQ4eDE1MTYvMzUw/eDQwOS9zLmdsYmlt/Zy5jb20vZXMvZ2Uv/Zi9vcmlnaW5hbC8y/MDE1LzEwLzI5L2Rz/Y181MDg1LmpwZw">
         </div>
     </section>
     
