--- a/att.html
+++ b/att.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="conteiner">
@@ -43,9 +43,55 @@
             </div>
         </div>
 
-        <div class="row"></div>
+        <div class="row">
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
+            <div class="col">
+                <h1>A</h1>
+            </div>
 
-        <div class="row"></div>
+        </div>
+
+        <div class="row">
+            <div class="col">I</div>
+            <div class="col">S</div>
+            <div class="col">S</div>
+            <div class="col">O</div>
+        </div>
 
 
     </div>
