--- a/index_boot.html
+++ b/index_boot.html
@@ -185,24 +185,13 @@
         
         <section class="">
             <div class="row">
-                <div class="col">
-
-                    <div class="row divisao_div sessao3">
-
-                            <h2>Um pouco sobre nós</h2>
-                        
+                <div class="col sessao3">
+                    <div>
+                        <h2>Um pouco sobre nós</h2>
+                        <p>
+                            Nem todos desejam sua partida seja mormida, visam esse mercado não explorado, criamos a Funerária Avé Maria para atender esse demanda
+                        </p>
                     </div>
-
-
-                    <div class="row divisao_div sessao4">
-                        <div class="col">
-                            <p>
-                                Nem todos desejam sua partida seja mormida, visam esse mercado não explorado, criamos a Funerária Avé Maria para atender esse demanda
-                            </p>
-                        </div>
-
-                    </div>
-
 
                     </div>
                 <div class="col">
