inicio das responsividade

--- a/index_boot.html
+++ b/index_boot.html
@@ -13,7 +13,7 @@
 
         <section class="sessao1 sessao_geral backgroud">
             
-            <div class="logo linhas_s1 ">
+            <div class="logo linhas_s1 d-none d-md-block">
                 <img src="Logo_Ave_Maria_2.png" alt="" class="ajuste_imagem" >
             </div>
 
@@ -57,7 +57,7 @@
         </section>
         
 
-        <section class="sessao_geral col d-flex flex-column justify-content-center align-items-center">
+        <section class="sessao_geral col d-flex flex-column justify-content-center align-items-center d-none d-md-block">
 
             <div class="row text-center cadastro">
                 <h2>Escolha entre os diversos tipos de funerais disponíveis</h2>
@@ -189,7 +189,7 @@
             </div>
         </section>
 
-        <section class="sessao_geral">
+        <section class="sessao_geral d-none d-md-block ">
             <div class="row">
                 <div class="col">
                     <div>
