--- a/index_boot.html
+++ b/index_boot.html
@@ -181,7 +181,7 @@
         <div class="d-md-none d-flex flex-column justify-content-center align-items-center">
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -198,7 +198,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -215,7 +215,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -232,7 +232,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -249,7 +249,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -266,7 +266,7 @@
             </div>
 
 
-            <div class="row">
+            <div class="row space_card">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
