--- a/index_boot.html
+++ b/index_boot.html
@@ -299,10 +299,10 @@
             <div class="row div_alt_completa">
                 <div class="col sessao3">
                     <div>
-                        <h2>Um pouco sobre nós</h2>
+                        <h2>Bem-vindo à Funerária Ave Maria: Sua morte, nossa alégria!</h2>
                         <p>
-                            Nem todos desejam sua partida seja mormida, visam esse mercado não explorado, criamos a Funerária Avé Maria para atender esse demanda
-                        </p>
+                            Na Funerária Ave Maria, estamos comprometidos em fornecer serviços de funerária com empatia, respeito e profissionalismo. Sabemos que o momento da perda de um ente querido é extremamente delicado e desafiador, e é por isso que estamos aqui para oferecer apoio e assistência a você e sua família.  Nossa missão é aliviar o fardo emocional e logístico que a perda de um ente querido pode acarretar. Com anos de experiência e uma equipe dedicada, garantimos que você receberá
+                             o mais alto padrão de cuidado e serviço em todos os momentos.</p>
                     </div>
 
                     </div>
@@ -316,14 +316,14 @@
             <div class="row div_alt_completa">
                 <div class="col flex align-items-center">
                     <div>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-3ywCcerZM0?si=Pj9rB4HcJhnRJQtF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/fOBiLWUjcCs?si=1YaV-hoI_BBq1Z8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div>
                 </div>    
                 <div class="col sessao3">
                     <div>
-                        <h2>Um pouco sobre nós</h2>
+                        <h2>Bem-vindo à Funerária Ave Maria: Sua morte, nossa alégria!</h2>
                         <p>
-                            Nem todos desejam sua partida seja mormida, visam esse mercado não explorado, criamos a Funerária Avé Maria para atender esse demanda
-                        </p>
+                            Na Funerária Ave Maria, estamos comprometidos em fornecer serviços de funerária com empatia, respeito e profissionalismo. Sabemos que o momento da perda de um ente querido é extremamente delicado e desafiador, e é por isso que estamos aqui para oferecer apoio e assistência a você e sua família.  Nossa missão é aliviar o fardo emocional e logístico que a perda de um ente querido pode acarretar. Com anos de experiência e uma equipe dedicada, garantimos que você receberá
+                             o mais alto padrão de cuidado e serviço em todos os momentos.</p>
                     </div>
 
                 </div>
