--- a/index_boot.html
+++ b/index_boot.html
@@ -400,8 +400,12 @@
                 <div class="col">
                     <img src="CR_Vasco_da_Gama_2021_logo.png" alt="" class="img-fluid">
                 </div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <img src="Socaixoes_1.png" alt="" class="img-fluid">
+                </div>
+                <div class="col">
+                    <img src="justiceiro.png" alt="" class="img-fluid">
+                </div>
 
             </div>
             
@@ -446,6 +450,10 @@
         <div class="row">
             <div class="col">
                 <p>Logo</p>
+                
+            </div>
+            <div class="col">
+                <img src="Logo_Ave_Maria_2.png" alt="" class="img-fluid div_alt_completa ">
             </div>
             <div class="col"> 
                 <p>@2023</p>
