correção no selo

--- a/index_boot.html
+++ b/index_boot.html
@@ -332,12 +332,11 @@
                                 A Funerária Ave Maria tem sido uma referência na indústria de serviços funerários, demonstrando um compromisso constante com a empatia, a compaixão e o respeito pelas famílias que servem. Sua dedicação incansável em fornecer apoio durante os momentos mais desafiadores é notável, e sua abordagem cuidadosa e respeitosa é um farol de esperança para muitos.
                             </p>
                     </div>
-
                     </div>
-                <div class="col flex align-items-center ">
+                    </div>
+                <div class="col flex align-items-center justify-content-center ">
                     <img src="selo-garantia.png" alt="" class="img-fluid">
                 </div>
-            </div>
         </section>
 
         <section class="sessao_geral d-none d-md-block ">
