correção no rodapé

--- a/index_boot.html
+++ b/index_boot.html
@@ -451,8 +451,8 @@
                 <p>Logo</p>
                 
             </div>
-            <div class="col">
-                <img src="Logo_Ave_Maria_2.png" alt="" class="img-fluid div_alt_completa ">
+            <div class="col container">
+                <img src="Logo_Ave_Maria_2.png" alt="" class="img-fluid rodape ">
             </div>
             <div class="col"> 
                 <p>@2023</p>
