--- a/index_boot.html
+++ b/index_boot.html
@@ -11,7 +11,7 @@
 <body class="backgroud">
     <div class="container">
 
-        <section class="sessao1 sessao_geral">
+        <section class="sessao1 sessao_geral justify-content-center align-items-center">
             
             <div class="linhas_s1 d-none d-md-block">
                 <div class="logo">
@@ -46,6 +46,8 @@
                 <button type="button" class="btn btn-primary">Confirmar</button>
             </div>
         </div>
+
+        <div class="d-md-none linhas_s1"></div>
 
         <div class="d-md-none">
             <div class="row">
