--- a/index_boot.html
+++ b/index_boot.html
@@ -394,9 +394,8 @@
             <div class="row text-center">
                 <h2>Alguns dos nossos parceiros</h2>
             </div>
-            <div class="row cadastro">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et reiciendis sint doloremque praesentium dolore quae. Corporis atque alias, labore cum assumenda sequi hic, 
-                    blanditiis necessitatibus perspiciatis deserunt sit aperiam odit!</p>
+            <div class="row cadastro text-center">
+                <p>Conheça algumas de nossas empresas parceiras:</p>
             </div>
             <div class="row text-center ">
                 <h3>Parceiros:</h3>
